--- a/Tests/iOS/Podfile
+++ b/Tests/iOS/Podfile
@@ -1,6 +1,14 @@
 use_frameworks!
 
 target 'iOSTests' do
-  pod 'Quick', '~>1.2.0'
-  pod 'Nimble', '~>7.0.2'
+  pod 'Quick', '~> 1.3.2'
+  pod 'Nimble', '~> 7.3.1'
+end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '4.1'
+        end
+    end
 end
